@@ -21,6 +21,15 @@
 </tr>
 </table>
 <p>
+2004-11-07  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/tiff.c (WriteTIFFImage): Ensure that words in the
+        scanline are converted to little-endian format on little-endian
+        CPUs.
+
+</UL>
+<p>
 2004-11-06  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
